<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateUserActivity"
    android:orientation="vertical"
    android:alpha="0.8"
    android:background="#4e0bde"
    android:layout_gravity="center_horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/image_border"
        android:padding="7dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/cimealogo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:textColor="#3EE94F"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:textSize="30sp"
        android:text="@string/update_user_details"
        />

    <EditText
        android:id="@+id/editText_id"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/id"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:paddingLeft="15dp"
        android:background="@drawable/edittextcorner"
        />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/username"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:paddingLeft="15dp"
        android:background="@drawable/edittextcorner"
        />
    <EditText
        android:id="@+id/editText_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:paddingLeft="15dp"
        android:background="@drawable/edittextcorner"
        />
    <EditText
        android:id="@+id/editText_firstname"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/firstname"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:paddingLeft="15dp"
        android:background="@drawable/edittextcorner"
        />
    <EditText
        android:id="@+id/editText_lastname"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="Last Name"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:paddingLeft="15dp"
        android:background="@drawable/edittextcorner"
        />
    <EditText
        android:id="@+id/editText_address"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/address"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:paddingLeft="15dp"
        android:background="@drawable/edittextcorner"
        />
    <EditText
        android:id="@+id/editText_phoneno"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/phoneno"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:paddingLeft="15dp"
        android:background="@drawable/edittextcorner"
        />
    <Button
        android:id="@+id/btn_updateuser"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/update"
        android:background="@drawable/rounded_corners"
        android:textSize="17dp"
        android:textColor="#ffffff"

        />

</LinearLayout>