<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUserctivity"
    android:orientation="vertical"
    android:alpha="0.8"
    android:background="#4e0bde"
    android:layout_gravity="center_horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/image_border"
        android:padding="7dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/cimealogo" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:background="@drawable/edittextcorner"
        android:hint="@string/username"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"

        />
    <EditText
        android:id="@+id/editText_password"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:background="@drawable/edittextcorner"
        android:hint="@string/password"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:paddingLeft="15dp"
        />
    <EditText
        android:id="@+id/editText_firstname"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:hint="@string/firstname"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:paddingLeft="15dp"
        android:background="#ffffff"
        />
    <EditText
        android:id="@+id/editText_lastname"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:hint="Last Name"
        android:background="@drawable/edittextcorner"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:paddingLeft="15dp"
        />
    <EditText
        android:id="@+id/editText_address"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:hint="@string/address"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextcorner"
        android:paddingLeft="15dp"
        />
    <EditText
        android:id="@+id/editText_phoneno"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:hint="@string/phoneno"
        android:background="@drawable/edittextcorner"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:paddingLeft="15dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/btn_adduser"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="60dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corners"
        android:text="@string/add_user"
        android:textSize="17dp"
        android:textColor="#ffffff"

        />
        <Button
            android:id="@+id/btn_viewuser"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"
            android:text="@string/view_users"
            android:background="@drawable/rounded_corners"
            android:layout_marginLeft="10dp"
            android:textSize="17dp"
            android:textColor="#ffffff"

            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_updateuser"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/update"
        android:background="@drawable/rounded_corners"
        android:textSize="17dp"
        android:textColor="#ffffff"

        />


</LinearLayout>