<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:alpha="0.8"
    android:background="#4e0bde">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/image_border"
        android:padding="7dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/cimealogo" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/username"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:paddingLeft="15dp"
        android:background="@drawable/edittextcorner"
        />
    <EditText
        android:id="@+id/editText_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:background="@drawable/edittextcorner"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        />
    <EditText
        android:id="@+id/editText_cnf_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/confirm_password"
        android:background="@drawable/edittextcorner"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:paddingLeft="15dp"

        />
    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/register"
        android:background="@drawable/rounded_corners"
        android:textSize="17sp"
        android:textColor="#ffffff"

        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="80dp"
            android:text="@string/already_registered"
            android:textSize="20sp"
            android:textColor="#ffffff"

            />
        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#0A0A0A"
            android:textSize="20sp"
            android:text="@string/login"
            />
    </LinearLayout>

</LinearLayout>